--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
+    <head>
+        <meta charset="utf-8">
+        <!-- Icon Font-->
+        <script src="https://kit.fontawesome.com/dca8878e6d.js"
+            crossorigin="anonymous"></script>
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- Compiled and minified JavaScript -->
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <!-- Jquery -->
+        <script
+            src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <style>
         .cyber-lima {
             color: #8AC614;
         }
@@ -65,78 +67,92 @@
             color: rgb(69, 69, 69);
         }
     </style>
-</head>
+    </head>
 
-<body class="">
-    <br>
-    <div class="container">
-        <!-- <div class="flow-text">
-            <h1> ESTE ES EL PUTO TITULO</h1>
-        </div>
-        <br> -->
-        <div class="row">
-            <div class="col s6">
-                <a href="https://www.codewars.com/users/emanolorb">
-                    <img src="https://es.gravatar.com/userimage/99098215/01609bfb9c2e37e670e07beaae923b13.jpg?size=400"
-                        class="circle responsive-img" alt="200">
-                </a>
+    <body class="">
+        <br>
+        <div class="container">
+            <div class="center-align">
+                <h1> ESTE ES EL PUTO TITULO</h1>
             </div>
-            <div class="col s6">
-                <div class="row">
-                    <h3 class="">
-                        Emmanuel Ramirez Badillo
-                    </h3>
+            <br>
+            <div class="row">
+                <div class="col s6">
+                    <a href="https://www.codewars.com/users/emanolorb">
+                        <img
+                            src="https://es.gravatar.com/userimage/99098215/01609bfb9c2e37e670e07beaae923b13.jpg?size=400"
+                            class="circle responsive-img" alt="200">
+                    </a>
                 </div>
-                <div class="row">collum</div>
-                <div class="row">collum</div>
-                <div class="row">collum</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s6">
-                <a href="https://www.codewars.com/users/emanolorb">
-                    <img src="https://www.codewars.com/users/emanolorb/badges/large" alt="Markdown Monster icon"
-                        class="responsive-img" />
-                </a>
-            </div>
-            <div class="col s6">
-                <!-- Contact -->
-                <div class="row">
-                    <div class="col s1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-linkedin l-blue" viewBox="0 0 16 16">
-                            <path
-                                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
-                        </svg>
+                <div class="col s6">
+                    <div class="row">
+                        <h3 class="">
+                            Emmanuel Ramirez Badillo
+                        </h3>
                     </div>
-                    <div class="col s1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                            class="bi bi-github" viewBox="0 0 16 16">
-                            <path
-                                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-                        </svg>
-                    </div>
-                    <div class="col s1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                            class="bi bi-whatsapp w-green" viewBox="0 0 16 16">
-                            <path
-                                d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
-                        </svg>
-                    </div>
-                    <div class="col s1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                            class="bi bi-envelope g-red" viewBox="0 0 16 16">
-                            <path
-                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
-                        </svg>
-                    </div>
+                    <div class="row">collum</div>
+                    <div class="row">collum</div>
+                    <div class="row">collum</div>
                 </div>
             </div>
-            <!-- Header end -->
+            <div class="row">
+                <div class="col s6">
+                    <a href="https://www.codewars.com/users/emanolorb">
+                        <img
+                            src="https://www.codewars.com/users/emanolorb/badges/large"
+                            alt="sshh"
+                            class="responsive-img" />
+                    </a>
+                </div>
+                <div class="col s6">
+                    <!-- Contact -->
+                    <div class="row">
+                        <div class="col s1">
+                            <a class="l-blue tooltipped"
+                            data-position="top"
+                            data-tooltip="This is some extra information"
+                            href="https://www.linkedin.com/in/emmanuel-rb/"
+                            >
+                                <i class="fa fa-linkedin"></i>
+                            </a>
+                        </div>
+                        <div class="col s1">
+                            <a 
+                                class="tooltipped"
+                                data-position="bottom"
+                                data-tooltip="This is some extra information"
+                                href="https://github.com/emanolorb"
+                            >
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                        </div>
+                        <div class="col s1">
+                            <a class="w-green tooltipped"
+                            data-position="top"
+                            data-tooltip="This is some extra information"
+                            >
+                                <i class="fa-brands fa-whatsapp"></i>
+                            </a>
+                        </div>
+                        <div class="col s1">
+                            <a class="g-red tooltipped"
+                            data-position="bottom"
+                            data-tooltip="This is some extra information"
+                            >
+                                <i class="fa-solid fa-at"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Header end -->
+            </div>
         </div>
-    </div>
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-</body>
+        <!--JavaScript at end of body for optimized loading-->
+        <script>
+            $(document).ready(function(){
+                M.AutoInit();
+            });
+        </script>
+    </body>
 
 </html>
