--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             color: #76EE00;
         }
 
-        .w-green {
-            color: #00bb2d;
+        .green-w-background {
+            background-color: #00bb2d;
         }
 
         .grey-background {
@@ -43,8 +43,8 @@
             color: #318AFF;
         }
 
-        .l-blue {
-            color: #0E76A8;
+        .l-blue-background {
+            background-color: #0E76A8;
         }
 
         .cyber-orange {
@@ -55,8 +55,12 @@
             color: #FF009D;
         }
 
-        .g-red {
-            color: #DB4A39;
+        .red-g-background {
+            background-color: #DB4A39;
+        }
+
+        .cosmisc-purple-background {
+            background-color: #3e039e;
         }
 
         .cyber-black {
@@ -66,6 +70,10 @@
         .cyber-grey {
             color: rgb(69, 69, 69);
         }
+
+        .cosmisc-purple {
+            color: #3e039e;
+        }
     </style>
     </head>
 
@@ -73,7 +81,7 @@
         <br>
         <div class="container">
             <div class="center-align">
-                <h1> ESTE ES EL PUTO TITULO</h1>
+                <h1>Emmanuel Ramirez Badillo</h1>
             </div>
             <br>
             <div class="row">
@@ -86,18 +94,23 @@
                 </div>
                 <div class="col s6">
                     <div class="row">
-                        <h3 class="">
-                            Emmanuel Ramirez Badillo
-                        </h3>
+                        <br>
                     </div>
-                    <div class="row">collum</div>
-                    <div class="row">collum</div>
-                    <div class="row">collum</div>
+                    <div class="row">
+                        <br>
+                    </div>
+                    <div class="row"><h5>Licenciado en Informatica / FCA / UNAM</h5></div>
+                    <div class="row"><h4>collum</h4></div>
+                    <div class="row"><h4>collum</h4></div>
+                    <div class="row"><h4>collum</h4></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col s6">
-                    <a href="https://www.codewars.com/users/emanolorb">
+                    <a class="tooltipped"
+                    href="https://www.codewars.com/users/emanolorb"
+                    data-position="bottom"
+                    data-tooltip="Code wars rating!">
                         <img
                             src="https://www.codewars.com/users/emanolorb/badges/large"
                             alt="sshh"
@@ -108,9 +121,9 @@
                     <!-- Contact -->
                     <div class="row">
                         <div class="col s1">
-                            <a class="l-blue tooltipped"
+                            <a class="tooltipped btn-floating pulse l-blue-background"
                             data-position="top"
-                            data-tooltip="This is some extra information"
+                            data-tooltip="Linkedin"
                             href="https://www.linkedin.com/in/emmanuel-rb/"
                             >
                                 <i class="fa fa-linkedin"></i>
@@ -118,26 +131,28 @@
                         </div>
                         <div class="col s1">
                             <a 
-                                class="tooltipped"
+                                class="tooltipped btn-floating pulse cosmisc-purple-background"
                                 data-position="bottom"
-                                data-tooltip="This is some extra information"
+                                data-tooltip="Github"
                                 href="https://github.com/emanolorb"
                             >
                                 <i class="fa-brands fa-github"></i>
                             </a>
                         </div>
                         <div class="col s1">
-                            <a class="w-green tooltipped"
+                            <a class="tooltipped modal-trigger btn-floating pulse green-w-background"
+                            href="#phoneModal"
                             data-position="top"
-                            data-tooltip="This is some extra information"
+                            data-tooltip="Numero en WhatsApp."
                             >
                                 <i class="fa-brands fa-whatsapp"></i>
                             </a>
                         </div>
                         <div class="col s1">
-                            <a class="g-red tooltipped"
+                            <a class="tooltipped modal-trigger btn-floating pulse red-g-background"
+                            href="#emailModal"
                             data-position="bottom"
-                            data-tooltip="This is some extra information"
+                            data-tooltip="Correo electronico"
                             >
                                 <i class="fa-solid fa-at"></i>
                             </a>
@@ -145,6 +160,29 @@
                     </div>
                 </div>
                 <!-- Header end -->
+            </div>
+        </div>
+        <!-- hidden objects -->
+        <!-- Modal Structure -->
+        <div id="phoneModal" class="modal">
+            <div class="modal-content center-align">
+            <h4>Numero de telefono</h4>
+            <br>
+            <h3>+525559573844</h3>
+            </div>
+            <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">ok</a>
+            </div>
+        </div>
+        <!-- Modal Structure -->
+        <div id="emailModal" class="modal">
+            <div class="modal-content center-align">
+            <h4>Correo Electronico</h4>
+            <br>
+            <h3>emanolorb@gmail.com</h3>
+            </div>
+            <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">ok</a>
             </div>
         </div>
         <!--JavaScript at end of body for optimized loading-->
