Feat: add background

--- a/index.html
+++ b/index.html
@@ -74,115 +74,156 @@
         .cosmisc-purple {
             color: #3e039e;
         }
+
     </style>
     </head>
 
-    <body class="">
+    <body class="grey-background">
         <br>
         <div class="container">
-            <div class="center-align">
-                <h1>Emmanuel Ramirez Badillo</h1>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col s6">
-                    <a href="https://www.codewars.com/users/emanolorb">
-                        <img
-                            src="https://es.gravatar.com/userimage/99098215/01609bfb9c2e37e670e07beaae923b13.jpg?size=400"
-                            class="circle responsive-img" alt="200">
-                    </a>
+            <div class="card-panel z-depth-4">
+                <div class="center-align">
+                    <h1>Emmanuel Ramirez Badillo</h1>
                 </div>
-                <div class="col s6">
-                    <div class="row">
-                        <br>
+                <br>
+                <div class="row">
+                    <div class="col s6">
+                        <a href="https://www.codewars.com/users/emanolorb">
+                            <img
+                                src="https://es.gravatar.com/userimage/99098215/01609bfb9c2e37e670e07beaae923b13.jpg?size=400"
+                                class="circle responsive-img" alt="200">
+                        </a>
                     </div>
-                    <div class="row">
-                        <br>
+                    <div class="col s6">
+                        <div class="row">
+                            <br>
+                        </div>
+                        <div class="row">
+                            <br>
+                        </div>
+                        <div class="row">
+                            <h4>Senior Backend Developer</h4>
+                        </div>
+                        <div class="row">
+                            <h5>Licenciado en Informatica / FCA / UNAM</h5>
+                        </div>
+                        <div class="row">
+                            <h5>Edad: 33</h5>
+                        </div>
+                        <div class="row">
+                            <h5>Nacionalidad: 🇲🇽</h5>
+                        </div>
+                        <div class="row">
+                            <h5>Estado civil: Casado</h5>
+                        </div>
                     </div>
-                    <div class="row"><h5>Licenciado en Informatica / FCA / UNAM</h5></div>
-                    <div class="row"><h4>collum</h4></div>
-                    <div class="row"><h4>collum</h4></div>
-                    <div class="row"><h4>collum</h4></div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col s6">
-                    <a class="tooltipped"
-                    href="https://www.codewars.com/users/emanolorb"
-                    data-position="bottom"
-                    data-tooltip="Code wars rating!">
-                        <img
-                            src="https://www.codewars.com/users/emanolorb/badges/large"
-                            alt="sshh"
-                            class="responsive-img" />
-                    </a>
-                </div>
-                <div class="col s6">
-                    <!-- Contact -->
-                    <div class="row">
-                        <div class="col s1">
-                            <a class="tooltipped btn-floating pulse l-blue-background"
-                            data-position="top"
-                            data-tooltip="Linkedin"
-                            href="https://www.linkedin.com/in/emmanuel-rb/"
-                            >
-                                <i class="fa fa-linkedin"></i>
-                            </a>
-                        </div>
-                        <div class="col s1">
-                            <a 
-                                class="tooltipped btn-floating pulse cosmisc-purple-background"
-                                data-position="bottom"
-                                data-tooltip="Github"
-                                href="https://github.com/emanolorb"
-                            >
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                        </div>
-                        <div class="col s1">
-                            <a class="tooltipped modal-trigger btn-floating pulse green-w-background"
-                            href="#phoneModal"
-                            data-position="top"
-                            data-tooltip="Numero en WhatsApp."
-                            >
-                                <i class="fa-brands fa-whatsapp"></i>
-                            </a>
-                        </div>
-                        <div class="col s1">
-                            <a class="tooltipped modal-trigger btn-floating pulse red-g-background"
-                            href="#emailModal"
+                <div class="row">
+                    <div class="col s6">
+                        <a class="tooltipped"
+                            href="https://www.codewars.com/users/emanolorb"
                             data-position="bottom"
-                            data-tooltip="Correo electronico"
-                            >
-                                <i class="fa-solid fa-at"></i>
-                            </a>
+                            data-tooltip="Code wars rating!">
+                            <img
+                                src="https://www.codewars.com/users/emanolorb/badges/large"
+                                alt="sshh"
+                                class="responsive-img" />
+                        </a>
+                    </div>
+                    <div class="col s6">
+                        <!-- Contact -->
+                        <div class="row">
+                            <div class="col s1">
+                                <a class="tooltipped btn-floating pulse
+                                    l-blue-background"
+                                    data-position="top"
+                                    data-tooltip="Linkedin"
+                                    href="https://www.linkedin.com/in/emmanuel-rb/">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </div>
+                            <div class="col s1">
+                                <a
+                                    class="tooltipped btn-floating pulse
+                                    cosmisc-purple-background"
+                                    data-position="bottom"
+                                    data-tooltip="Github"
+                                    href="https://github.com/emanolorb">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                            </div>
+                            <div class="col s1">
+                                <a class="tooltipped modal-trigger btn-floating
+                                    pulse green-w-background"
+                                    href="#phoneModal"
+                                    data-position="top"
+                                    data-tooltip="Numero en WhatsApp.">
+                                    <i class="fa-brands fa-whatsapp"></i>
+                                </a>
+                            </div>
+                            <div class="col s1">
+                                <a class="tooltipped modal-trigger btn-floating
+                                    pulse red-g-background"
+                                    href="#emailModal"
+                                    data-position="bottom"
+                                    data-tooltip="Correo electronico">
+                                    <i class="fa-solid fa-at"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!-- Header end -->
+            </div>
+            <!-- Header end -->
+            <div class="container cyber-lima">
+                <div class="col s6">
+                    <div class="row">
+                        <br>
+                    </div>
+                    <div class="row">
+                        <br>
+                    </div>
+                    <div class="row">
+                        <h4>qwqeqwer</h4>
+                    </div>
+                    <div class="row">
+                        <h5>qweqweqweM</h5>
+                    </div>
+                    <div class="row">
+                        <h5>Eqweqwe3</h5>
+                    </div>
+                    <div class="row">
+                        <h5>Naqwe🇲🇽</h5>
+                    </div>
+                    <div class="row">
+                        <h5>EqweqweCqwesado</h5>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- hidden objects -->
         <!-- Modal Structure -->
         <div id="phoneModal" class="modal">
             <div class="modal-content center-align">
-            <h4>Numero de telefono</h4>
-            <br>
-            <h3>+525559573844</h3>
+                <h4>Numero de telefono</h4>
+                <br>
+                <h3>+525559573844</h3>
             </div>
             <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">ok</a>
+                <a href="#!" class="modal-close waves-effect waves-green
+                    btn-flat">ok</a>
             </div>
         </div>
         <!-- Modal Structure -->
         <div id="emailModal" class="modal">
             <div class="modal-content center-align">
-            <h4>Correo Electronico</h4>
-            <br>
-            <h3>emanolorb@gmail.com</h3>
+                <h4>Correo Electronico</h4>
+                <br>
+                <h3>emanolorb@gmail.com</h3>
             </div>
             <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">ok</a>
+                <a href="#!" class="modal-close waves-effect waves-green
+                    btn-flat">ok</a>
             </div>
         </div>
         <!--JavaScript at end of body for optimized loading-->
