Feat: add parallax images

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         .cosmisc-purple-background {
             background-color: #3e039e;
         }
-
+        .dark-background {
+            background-color: #181818;
+        }
         .cyber-black {
             color: #222222;
         }
@@ -201,6 +203,80 @@
                 </div>
             </div>
         </div>
+        <!-- Skills end -->
+        <div class="parallax-container">
+            <div class="parallax">
+                <img src="images/lachida2.jpg"
+                alt="Mi esposa y yo"
+                >
+            </div>
+        </div>
+        <div class="section white">
+            <div class="row container">
+              <h2 class="header">Parallax</h2>
+              <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+            </div>
+        </div>
+        <div class="parallax-container">
+            <div class="parallax">
+                <img src="images/city.png"
+                alt="Wallheven image"
+                >
+            </div>
+        </div>
+        <div class="container">
+            <div class="container cyber-lima">
+                <div class="col s6">
+                    <div class="row">
+                        <br>
+                    </div>
+                    <div class="row">
+                        <br>
+                    </div>
+                    <div class="row">
+                        <h4>qwqeqwer</h4>
+                    </div>
+                    <div class="row">
+                        <h5>qweqweqweM</h5>
+                    </div>
+                    <div class="row">
+                        <h5>Eqweqwe3</h5>
+                    </div>
+                    <div class="row">
+                        <h5>Naqwe🇲🇽</h5>
+                    </div>
+                    <div class="row">
+                        <h5>EqweqweCqwesado</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- page end -->
+        <footer class="page-footer dark-background">
+            <div class="container">
+              <div class="row">
+                <div class="col l6 s12">
+                  <h5 class="white-text">Footer Content</h5>
+                  <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                  <h5 class="white-text">Links</h5>
+                  <ul>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="footer-copyright">
+              <div class="container">
+              © 2021 Copyright Text
+              <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+              </div>
+            </div>
+          </footer>
         <!-- hidden objects -->
         <!-- Modal Structure -->
         <div id="phoneModal" class="modal">
