index in progress

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         .cyber-rebel-blue {
-            color: #318AFF;
+            color: #2776df;
         }
 
         .l-blue-background {
@@ -178,27 +178,86 @@
             </div>
             <!-- Header end -->
             <div class="container cyber-lima">
-                <div class="col s6">
+                <div class="col s12">
+                    <h2 class="cyber-pink row">Habilidades</h2>
+                    <!-- Title -->
                     <div class="row">
-                        <br>
+                        <div class="col s10 push-s1 l-blue-background"><h3 class="cyber-sky-blue">Bases de Datos</h3></div>
+                        <div class="col s1 pull-s10 red-g-background"></div>
+                    </div>
+                    <!-- categories -->
+                    <div class="row">
+                        <div class="col s9 push-s2 l-blue-background"><h4 class="cyber-sky-blue">MySQL</h4></div>
+                        <div class="col s2 pull-s9 red-g-background"></div>
                     </div>
                     <div class="row">
-                        <br>
+                        <div class="col s9 push-s2 l-blue-background"><h4 class="cyber-sky-blue">PostgreSQL</h4></div>
+                        <div class="col s2 pull-s9 red-g-background"></div>
                     </div>
                     <div class="row">
-                        <h4>qwqeqwer</h4>
+                        <div class="col s9 push-s2 l-blue-background"><h4 class="cyber-sky-blue">SQL Server</h4></div>
+                        <div class="col s2 pull-s9 red-g-background"></div>
                     </div>
                     <div class="row">
-                        <h5>qweqweqweM</h5>
+                        <div class="col s9 push-s2 l-blue-background"><h4 class="cyber-sky-blue">SQLite</h4></div>
+                        <div class="col s2 pull-s9 red-g-background"></div>
                     </div>
                     <div class="row">
-                        <h5>Eqweqwe3</h5>
+                        <div class="col s9 push-s2 l-blue-background"><h4 class="cyber-sky-blue">Mongo</h4></div>
+                        <div class="col s2 pull-s9 red-g-background"></div>
                     </div>
                     <div class="row">
-                        <h5>Naqwe🇲🇽</h5>
+                        <div class="col s9 push-s2 l-blue-background"><h4 class="cyber-sky-blue">AWS-DynamoDB</h4></div>
+                        <div class="col s2 pull-s9 red-g-background"></div>
                     </div>
+                    <!-- Tile -->
                     <div class="row">
-                        <h5>EqweqweCqwesado</h5>
+                        <div class="col s9 push-s2 l-blue-background"><h4 class="cyber-sky-blue">Back-end</h4></div>
+                        <div class="col s2 pull-s9 red-g-background"></div>
+                    </div>
+                    <!-- categories -->
+                    <div class="row">
+                        <h4>Python</h4>
+                        <h4>Django</h4>
+                        <h4>FastAPI</h4>
+                        <h4>PHP</h4>
+                        <h4>Java</h4>
+                        <h4>C#</h4>
+                        <h4>AWS Lambda</h4>
+                        <h4>Serverless</h4>
+                        <h4>AWS S3</h4>
+                    </div>
+                    <!-- Tile -->
+                    <div class="row">
+                        <div class="col s10 push-s1 l-blue-background"><h3 class="cyber-sky-blue">Front-end</h3></div>
+                        <div class="col s1 pull-s10 red-g-background"></div>
+                    </div>
+                    <!-- categories -->
+                    <div class="row">
+                        <h4>Android - Kotlin</h4>
+                        <h4>Html</h4>
+                        <h4 class="cyber-orange">Bootstrap</h4>
+                        <h4>JavaScript</h4>
+                        <h4>Jquery</h4>
+                        <h4>CSS</h4>
+                        <h4>Materializecss</h4>
+                        <h4>.NET</h4>
+                    </div>
+                    <!-- Tile -->
+                    <div class="row">
+                        <div class="col s10 push-s1 l-blue-background"><h3 class="cyber-sky-blue">Herramientas</h3></div>
+                        <div class="col s1 pull-s10 red-g-background"></div>
+                    </div>
+                    <!-- categories -->
+                    <div class="row">
+                        <h4>GIT</h4>
+                        <h4>Trello</h4>
+                        <h4>Docker</h4>
+                        <h4>OS</h4>
+                        <h4>Android</h4>
+                        <h4>IOS</h4>
+                        <h4>GNU/Linux</h4>
+                        <h4>Windows</h4>
                     </div>
                 </div>
             </div>
